added category tree mock

--- a/Gnome.Web/config.json
+++ b/Gnome.Web/config.json
@@ -1,5 +1,5 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=gnome-core;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=.\\sqlexpress;Database=gnome-core;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
