--- a/Gnome.DataAccess/Gnome.DataAccess.csproj
+++ b/Gnome.DataAccess/Gnome.DataAccess.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="1.1.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="1.1.1" />
   </ItemGroup>
 
 </Project>
