--- a/Gnome.Web/package.json
+++ b/Gnome.Web/package.json
@@ -46,7 +46,9 @@
     "webpack-hot-middleware": "^2.12.2",
     "webpack-merge": "^0.14.1",
     "zone.js": "^0.7.6",
-    "ng2-tree": "^2.0.0-alpha.5"
+    "ng2-tree": "^2.0.0-alpha.5",
+    "chart.js": "^2.5.0",
+    "ng2-charts": "^1.5.0"
   },
   "devDependencies": {
     "@types/chai": "^3.4.34",
