--- a/Gnome.Fio.Service/Gnome.Fio.Service.csproj
+++ b/Gnome.Fio.Service/Gnome.Fio.Service.csproj
@@ -6,7 +6,9 @@
 
   <ItemGroup>
     <PackageReference Include="Polly" Version="5.0.6" />
+    <PackageReference Include="RestSharp.NetCore" Version="105.2.3" />
     <PackageReference Include="System.Xml.XmlDocument" Version="4.3.0" />
+    <PackageReference Include="System.Xml.XmlSerializer" Version="4.3.0" />
   </ItemGroup>
 
 </Project>
