--- a/Gnome.Transaction.Uploader/Gnome.Transactions.Uploader.csproj
+++ b/Gnome.Transaction.Uploader/Gnome.Transactions.Uploader.csproj
@@ -11,4 +11,13 @@
     <StartupObject />
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="10.0.2" />
+    <PackageReference Include="RabbitMQ.Client" Version="4.1.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Gnome.Transactions.Common\Gnome.Transactions.Common.csproj" />
+  </ItemGroup>
+
 </Project>
