--- a/Gnome.Transaction.Uploader/Gnome.Transactions.Uploader.csproj
+++ b/Gnome.Transaction.Uploader/Gnome.Transactions.Uploader.csproj
@@ -12,6 +12,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="1.1.1" />
     <PackageReference Include="Newtonsoft.Json" Version="10.0.2" />
     <PackageReference Include="RabbitMQ.Client" Version="4.1.3" />
   </ItemGroup>
